--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,33 @@
 {
-   "compilerOptions": {
-      "outDir": "./dist/",
-     "removeComments": true,
-     "baseUrl": ".",
-      "jsx": "react",
-      "target": "es5",
-      "module": "esnext",
-      "moduleResolution": "node",
-      "allowJs": true,
-      "sourceMap": true,
-      "importHelpers": true,
-      "noEmitHelpers": true,
-      "strictNullChecks": true,
-      "skipLibCheck": true,
-      "allowSyntheticDefaultImports": true,
-      "esModuleInterop": true,
-      "lib": [
-         "es5",
-         "dom"
-      ]
-   },
-   "files": ["src/index.tsx"],
-   "exclude": ["dist", "lab", "node_modules"]
+  "compilerOptions": {
+    "outDir": "build",
+    "module": "esnext",
+    "target": "es5",
+    "lib": ["es6", "dom", "es2016", "es2017"],
+    "sourceMap": true,
+    "allowJs": false,
+    "jsx": "react",
+    "declaration": true,
+    "moduleResolution": "node",
+    "forceConsistentCasingInFileNames": true,
+    "noImplicitReturns": true,
+    "suppressImplicitAnyIndexErrors": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "resolveJsonModule": true,
+    "noEmit": true
+  },
+  "include": ["src"],
+  "exclude": [
+    "node_modules",
+    "build",
+    "dist",
+    "rollup.config.js",
+    "webpack.config.js",
+    "jest.config.js"
+  ]
 }
